--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
     .rainbow-border {
       position: relative;
       border-radius: 20px;
-      padding: 0; /* padding îl punem în interior */
+      padding: 0;
       z-index: 0;
     }
     .rainbow-border::before {
       content: "";
       position: absolute;
-      top: -3px; bottom: -3px;
-      left: -3px; right: -3px;
-      border-radius: 23px;
+      top: -1.5px; 
+      bottom: -1.5px;
+      left: -1.5px;
+      right: -1.5px;
+      border-radius: 22px;
       background: linear-gradient(
         45deg,
         red,
